// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can pass component as function 1`] = `
<div>
  <p>
    foobar
  </p>
</div>
`;

exports[`can receive wrapper 1`] = `
<p>
  foobar
</p>
`;

exports[`can write snapshot test 1`] = `
<div>
  <p>
    hello
  </p>
</div>
`;
